--- a/utoipa-swagger-ui/Cargo.toml
+++ b/utoipa-swagger-ui/Cargo.toml
@@ -29,9 +29,7 @@ rocket = { version = "0.5", features = ["json"], optional = true }
 axum = { version = "0.8.0", default-features = false, features = [
     "json",
 ], optional = true }
-utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
-    "macros",
-] }
+utoipa = { version="5", default-features = false, features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 base64 = { version = "0.22.1" }
